scroll fix on smaller screans

--- a/components/contact/contact.scss
+++ b/components/contact/contact.scss
@@ -5,6 +5,7 @@
 .Contact {
     @extend .contentCol;
     position: relative;
+    margin-bottom: -50px;
 
     h1 {
         margin: 0 0 .75em;
